<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnRoadworks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPlanned"
        android:layout_alignLeft="@+id/btnPlanned"
        android:onClick="clickRoadworks"
        android:text="@string/Roadworks" />

    <Button
        android:id="@+id/btnPlanned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCurrent"
        android:layout_alignLeft="@+id/btnCurrent"
        android:onClick="clickPlanned"
        android:text="@string/Planned" />

    <Button
        android:id="@+id/btnCurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:onClick="clickCurrent"
        android:text="@string/Current" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCurrent"
        android:layout_alignParentBottom="true"
        android:onClick="clickExit"
        android:text="@string/btnExit" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="clickFilter"
        android:text="@string/btnFilter" />

</RelativeLayout>